@@ -2,34 +2,24 @@ package nl.pim16aap2.bigDoors.handlers;
 
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
-import org.bukkit.event.player.PlayerLoginEvent;
-import org.bukkit.scheduler.BukkitRunnable;
+import org.bukkit.event.player.PlayerJoinEvent;
 
 import nl.pim16aap2.bigDoors.BigDoors;
 
 public class LoginResourcePackHandler implements Listener
 {
     BigDoors plugin;
-    String   url;
+    String url;
 
     public LoginResourcePackHandler(BigDoors plugin, String url)
     {
         this.plugin = plugin;
-        this.url    = url;
+        this.url = url;
     }
 
     @EventHandler
-    public void onLogin(PlayerLoginEvent event)
+    public void onPlayerJoin(PlayerJoinEvent event)
     {
-        // Slight delay so the player actually fully exists.
-        new BukkitRunnable()
-        {
-            @Override
-            public void run()
-            {
-                if (event.getPlayer() != null)
-                    event.getPlayer().setResourcePack(url);
-            }
-        }.runTaskLater(plugin, 10);
+        event.getPlayer().setResourcePack(url);
     }
 }
