@@ -377,30 +377,24 @@ public class BridgeMover implements BlockMover
         // Tell the door object it has been opened and what its new coordinates are.
         updateCoords(door, openDirection, upDown, -1);
         toggleOpen  (door);
+
         if (!onDisable)
-            plugin.removeBlockMover(this);
-
-        // Change door availability to true, so it can be opened again.
-        // Wait for a bit if instantOpen is enabled.
-        int timer = onDisable   ?  0 :
-                    instantOpen ? 40 : plugin.getConfigLoader().coolDown() * 20;
-
-        if (timer > 0)
         {
+            plugin.removeBlockMover(this);
+            int delay = Math.min(plugin.getMinimumDoorDelay(), plugin.getConfigLoader().coolDown() * 20);
             new BukkitRunnable()
             {
                 @Override
                 public void run()
                 {
                     plugin.getCommander().setDoorAvailable(door.getDoorUID());
+                    if (door.isOpen())
+                        plugin.getAutoCloseScheduler().scheduleAutoClose(door, time, instantOpen);
                 }
-            }.runTaskLater(plugin, timer);
+            }.runTaskLater(plugin, delay);
         }
         else
             plugin.getCommander().setDoorAvailable(door.getDoorUID());
-
-        if (!onDisable && door.isOpen())
-            plugin.getAutoCloseScheduler().scheduleAutoClose(door, time, onDisable);
     }
 
     // Method that takes care of the rotation aspect.
@@ -419,6 +413,7 @@ public class BridgeMover implements BlockMover
             long startTime    = System.nanoTime();
             long lastTime;
             long currentTime  = System.nanoTime();
+            boolean hasFinished = false;
 
             @Override
             public void run()
@@ -451,7 +446,11 @@ public class BridgeMover implements BlockMover
                             savedBlocks.get(idx).getFBlock().setVelocity(new Vector(0D, 0D, 0D));
                     Bukkit.getScheduler().callSyncMethod(plugin, () ->
                     {
-                        putBlocks(false);
+                        if (!hasFinished)
+                        {
+                            putBlocks(false);
+                            hasFinished = true;
+                        }
                         return null;
                     });
                     cancel();
