@@ -3,6 +3,8 @@ Alpha 0.1.8.11
 - Added project URL to update available message received on login. Thanks, @Panda_Nesthesia for the suggestion.
 - Fixed "/DoorInfo <doorName>" only working if you provided a doorUID.
 - Fixed doors sometimes being fake toggled when receiving a redstone signal when auto closing. Thanks, @Ashh for the bug report!
+- ChunkUnloadEvent now also compares worlds before aborting door movement. Thanks, @IkHeetRemco_ for the bug report!
+- Fixed error on player join when trying to send a resource pack to a player that was not allowed to join. Thanks, @Relaxing for the bug report!
 
 Alpha 0.1.8.10
 - Fixed being able to modify properties of doors you have no access to via direct commands when using doorUIDs.
